<resources>
    <string name="app_name">Toolbox</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_net">NetworkSettings</string>
    <string name="title_allow_cellular_network">Allow 4G</string>
    <string name="summary_off_only_wifi">Wifi Only</string>
    <string name="pref_cellular_network">pref_cellular_network</string>
    <string name="pref_work_mode">pref_work_mode</string>
    <string name="title_work_mode">Work Mode</string>
    <string name="summary_on_online_work">Wifi &amp; 4G</string>
    <string name="summary_off_offline_work">Offline</string>
    <string name="offline_tool_bar">Offline Tools</string>
    <string name="online_tool_bar">Online Tools</string>
    <string name="to_be_continued">TO BE CONTINUED</string>

    <!--XingjiabiTool-->
    <string name="good_index">Index</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="xingjiabi">Value Over Price</string>
    <string name="hint_no_goods">No goods yet</string>
    <string name="amount_weight">Quantity/Weight</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>

    <!--DpconverterTool-->
    <string name="dp">dp</string>
    <string name="sp">sp</string>
</resources>
